--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Welcome to the Redincla’s homepage!
+description: repository of Claire's data structure and scripts
